--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "sqlite3": "^3.1.0"
   },
   "dependencies": {
-    "bookshelf": "^0.8.2",
-    "knex": "^0.8.6"
+    "body-parser": "^1.14.1",
+    "callbackify": "^1.1.0",
+    "debug": "^2.2.0",
+    "dockerode": "^2.2.3",
+    "express": "^4.13.3",
+    "morgan": "^1.6.1",
+    "rc": "^1.1.2"
   }
 }
