--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "William Petit <wpetit@cadoles.com>",
   "license": "MIT",
   "devDependencies": {
-    "shelljs": "^0.5.3",
-    "sqlite3": "^3.1.0"
+    "shelljs": "^0.5.3"
   },
   "dependencies": {
     "body-parser": "^1.14.1",
