--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/nodeunit test/**/*.js"
   },
   "author": "William Petit <wpetit@cadoles.com>",
   "license": "MIT",
   "devDependencies": {
+    "nodeunit": "^0.9.1",
     "shelljs": "^0.5.3",
     "sqlite3": "^3.1.0"
   },
