--- a/containers/test-app/Dockerfile
+++ b/containers/test-app/Dockerfile
@@ -3,3 +3,5 @@ FROM debian:jessie
 LABEL io.aegir.app="1"
 LABEL io.aegir.app.name="Test App"
 LABEL io.aegir.app.description="A simple Aegir app for test purpose"
+
+CMD while true; do echo Ping; sleep 2; done;
