--- a/containers/test-app/Dockerfile
+++ b/containers/test-app/Dockerfile
@@ -4,4 +4,7 @@ LABEL io.aegir.app="1"
 LABEL io.aegir.app.name="Test App"
 LABEL io.aegir.app.description="A simple Aegir app for test purpose"
 
+# App variables
+LABEL io.aegir.app.vars.message="{ \"type\":\"text\", \"default\": \"Hello world !\" }"
+
 CMD while true; do echo Ping; sleep 2; done;
