--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
   "author": "William Petit <wpetit@cadoles.com>",
   "license": "MIT",
   "devDependencies": {
-    "nodeunit": "^0.9.1",
-    "shelljs": "^0.5.3"
+    "nodeunit": "^0.9.1"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.5",
+    "browserify-middleware": "^7.0.0",
     "callbackify": "^1.1.0",
+    "compression": "^1.6.0",
     "debug": "^2.2.0",
     "dockerode": "^2.2.3",
     "express": "^4.13.3",
     "jsonschema": "^1.0.2",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
-    "rc": "^1.1.2"
+    "rc": "^1.1.2",
+    "react": "^0.14.2",
+    "react-addons-update": "^0.14.2",
+    "react-bootstrap": "^0.27.3",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0"
   }
 }
