--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dockerode": "^2.2.3",
     "express": "^4.13.3",
     "jsonschema": "^1.0.2",
+    "mkdirp": "^0.5.1",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
     "rc": "^1.1.2",
@@ -34,6 +35,7 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "rimraf": "^2.4.3"
   }
 }
