--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.13.3",
     "jsonschema": "^1.0.2",
     "mkdirp": "^0.5.1",
+    "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
     "rc": "^1.1.2",
