--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^2.2.0",
     "dockerode": "^2.2.3",
     "express": "^4.13.3",
+    "http-proxy": "^1.12.0",
     "jsonschema": "^1.0.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
