--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "rc": "^1.1.2",
     "react": "^0.14.2",
     "react-addons-update": "^0.14.2",
@@ -40,6 +42,7 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.0",
-    "rimraf": "^2.4.3"
+    "rimraf": "^2.4.3",
+    "sha512crypt-node": "^0.1.0"
   }
 }
