Mise en place i18n sur toutes les vues

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "dockerode": "^2.2.3",
     "express": "^4.13.3",
     "http-proxy": "^1.12.0",
+    "i18next": "^2.2.0",
+    "i18next-browser-languagedetector": "0.0.14",
+    "i18next-localstorage-cache": "0.0.4",
+    "i18next-xhr-backend": "^0.3.0",
     "jquery": "^2.2.1",
     "jsonschema": "^1.0.2",
     "mkdirp": "^0.5.1",
@@ -40,6 +44,7 @@
     "react": "^0.14.7",
     "react-addons-update": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-i18next": "^1.1.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
     "redux": "^3.0.4",
