--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "^2.2.0",
     "dockerode": "^2.2.3",
     "express": "^4.13.3",
+    "font-awesome": "^4.5.0",
     "http-proxy": "^1.12.0",
     "i18next": "^2.2.0",
     "i18next-browser-languagedetector": "0.0.14",
