--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rimraf": "^2.4.3",
     "sha512crypt-node": "^0.1.0",
     "shortid": "^2.2.4",
-    "slugs": "^0.1.3"
+    "slugs": "^0.1.3",
+    "victory": "^0.4.2"
   }
 }
